[package]
name = "query-sei-tappers"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmos = { git = "https://github.com/Levana-Protocol/levana-cosmos-rs.git", branch = "develop" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
